--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-beautifulsoup4==4.6.0
+beautifulsoup4==4.9.2
 bs4==0.0.1
-certifi==2018.4.16
+certifi==2020.6.20
 chardet==3.0.4
-coinmarketcap==5.0.1
-html5lib==1.0.1
-idna==2.6
-requests==2.18.4
-requests-cache==0.4.13
-six==1.11.0
-urllib3==1.22
+coinmarketcap==5.0.3
+html5lib==1.1
+idna==2.10
+requests==2.24.0
+requests-cache==0.5.2
+six==1.15.0
+soupsieve==2.0.1
+urllib3==1.25.10
 webencodings==0.5.1
